--- a/style.css
+++ b/style.css
@@ -1,439 +1,77 @@
-@import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 body {
-  background-color: #1f2426;
-  color: #b4dad7;
-  font-family: "Bitter", Helvetica;
-}
-
-ul li {
-  padding-top: .5em;
-}
-
-p {
-  line-height: 1.8em;
-}
-
-h2 {
-  border: 2px solid #b4dad7;
-  padding: .5em;
-  display: inline-block;
-}
-
-h3 {
-  line-height: .3em;
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: #fff8f0;
+  color: #333;
 }
 
 header {
-  overflow: hidden;
-}
-header #twitter {
-  float: right;
-  margin-top: 45px;
-}
-
-.wrap {
-  padding: 2em;
+  background: #ff6f61;
+  padding: 1rem;
+  color: white;
+  text-align: center;
 }
 
-section {
-  width: 950px;
-  margin: 0 auto;
+header h1 {
+  margin: 0;
 }
 
-hr {
-  border: 1px solid #b4dad7;
-}
-
-.full-qual {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.third-qual {
-  width: 70%;
-  float: left;
-  margin-right: 5%;
-}
-
-.quarter-qual {
-  width: 25%;
-  float: left;
-}
-
-.qual {
-  margin-bottom: 40px;
-}
-.qual hr {
-  margin: 0 auto;
-  width: 100%;
-}
-
-.data {
-  height: 200px;
-  position: relative;
-  width: 100%;
-  margin-bottom: 10px;
-}
-.data .data-item {
-  position: absolute;
-  width: 0;
-  height: 0;
-  bottom: 0;
-}
-.data .data-item h5 {
-  position: absolute;
-  bottom: 10px;
-  white-space: nowrap;
-  border-bottom: 2px solid #b4dad7;
-}
-.data .data-item span {
-  position: absolute;
-  bottom: 13px;
-  border-left: 2px solid #b4dad7;
-}
-
-#item1 {
-  z-index: 1;
-  right: 0;
-  border-left: 400px solid transparent;
-  border-right: 400px solid transparent;
-  border-bottom: 0px solid #2196a7;
-}
-
-#item2 {
-  z-index: 5;
-  right: 50px;
-  border-left: 100px solid transparent;
-  border-right: 100px solid transparent;
-  opacity: .5;
-  border-bottom: 0px solid #b4dad7;
-}
-
-#item3 {
-  z-index: 5;
-  left: 60px;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-bottom: 0px solid #2196a7;
-}
-#item3 h5 {
-  position: absolute;
-  left: -65px;
-}
-
-#item4 {
-  z-index: 5;
-  left: 150px;
-  border-left: 75px solid transparent;
-  border-right: 75px solid transparent;
-  opacity: .5;
-  border-bottom: 0px solid #b4dad7;
-}
-#item4 h5 {
-  position: absolute;
-  left: -65px;
-}
-
-#item5 {
-  z-index: 5;
-  left: 300px;
-  border-left: 75px solid transparent;
-  border-right: 75px solid transparent;
-  opacity: .5;
-  border-bottom: 0px solid #b4dad7;
-}
-#item5 h5 {
-  text-align: right;
-  position: absolute;
-  left: -65px;
-  bottom: 70px;
-}
-#item5 span {
-  line-height: 80px;
-}
-
-#item6 {
-  z-index: 5;
-  left: 400px;
-  border-left: 200px solid transparent;
-  border-right: 200px solid transparent;
-  opacity: .5;
-  border-bottom: 0px solid #b4dad7;
-}
-#item6 h5 {
-  position: absolute;
-  bottom: 70px;
-}
-#item6 span {
-  line-height: 80px;
-}
-
-#item7 {
-  z-index: 10;
-  left: 450px;
-  border-left: 125px solid transparent;
-  border-right: 125px solid transparent;
-  border-bottom: 0px solid #b4dad7;
-}
-#item7 h5 {
-  text-align: right;
-  position: absolute;
-  left: -67px;
-  bottom: 30px;
-}
-#item7 span {
-  line-height: 40px;
-}
-
-.years {
-  text-align: justify;
-}
-.years .middot {
-  margin: 0 auto;
-  font-size: 58px;
-  color: #4b5859;
-  line-height: 20px;
-}
-.years .year-list {
-  margin-top: -18px;
-}
-.years * {
-  list-style-position: outside;
+nav ul {
+  list-style: none;
   padding: 0;
-  display: inline;
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  margin-top: 0.5rem;
 }
-.years span {
-  display: inline-block;
-  position: relative;
+
+nav a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+#hero {
+  background: #ffe5d9;
+  text-align: center;
+  padding: 2rem 1rem;
+}
+
+#products {
+  padding: 2rem;
+}
+
+.product-list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.product-card {
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #ddd;
+  padding: 1rem;
+  width: 200px;
+  text-align: center;
+}
+
+.product-card img {
   width: 100%;
-  height: 0;
+  border-radius: 6px;
 }
 
-.edu .highschool {
-  color: #4b5859;
-  margin-left: 1em;
-}
-.edu .schools {
-  position: relative;
-  height: 100px;
-  margin-bottom: .5em;
-}
-.edu .schools .school-item h5 {
-  position: absolute;
-  bottom: 10px;
-  white-space: nowrap;
-  border-bottom: 2px solid #b4dad7;
-}
-.edu .schools .school-item span {
-  position: absolute;
-  bottom: 13px;
-  border-left: 2px solid #b4dad7;
+#about,
+#contact {
+  padding: 2rem;
+  background: #fff0e1;
 }
 
-#school1 {
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-left: 125px solid transparent;
-  border-right: 125px solid transparent;
-  border-bottom: 62.5px solid #2196a7;
-}
-
-#school2 {
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: 250px;
-  width: 0;
-  height: 0;
-  border-left: 175px solid transparent;
-  border-right: 175px solid transparent;
-  border-bottom: 87.5px solid #b4dad7;
-}
-
-.hna {
-  position: relative;
-}
-.hna ul {
-  list-style-position: inside;
-  padding: 0;
-  color: #4b5859;
-}
-.hna ul ul {
-  padding-left: 1em;
-}
-
-.sknex {
-  clear: both;
-  margin-bottom: 2em;
-}
-
-.sknex {
-  overflow: hidden;
-}
-.sknex .skills-text {
-  float: left;
-  width: 28%;
-  margin-right: 2%;
-  color: #4b5859;
-}
-
-.skills-vis {
-  float: left;
-  width: 70%;
-}
-
-#skill1 {
-  width: 45%;
-  margin-right: 5%;
-  float: left;
-}
-#skill1 #puters .pie {
-  background-color: #b4dad7;
-  -webkit-transform: rotate(80deg);
-  -moz-transform: rotate(80deg);
-  -o-transform: rotate(80deg);
-  transform: rotate(80deg);
-}
-#skill1 #puters4 {
-  background-color: #215961;
-  -webkit-transform: rotate(210deg);
-  -moz-transform: rotate(210deg);
-  -o-transform: rotate(210deg);
-  transform: rotate(210deg);
-}
-#skill1 #movies {
-  background-color: #307982;
-  -webkit-transform: rotate(170deg);
-  -moz-transform: rotate(170deg);
-  -o-transform: rotate(170deg);
-  transform: rotate(170deg);
-}
-#skill1 #games {
-  background-color: #2196a7;
-  -webkit-transform: rotate(160deg);
-  -moz-transform: rotate(160deg);
-  -o-transform: rotate(160deg);
-  transform: rotate(160deg);
-}
-#skill1 #music {
-  background-color: #519ca4;
-  -webkit-transform: rotate(110deg);
-  -moz-transform: rotate(110deg);
-  -o-transform: rotate(110deg);
-  transform: rotate(110deg);
-}
-#skill1 #music2 {
-  background-color: #519ca4;
-  -webkit-transform: rotate(80deg);
-  -moz-transform: rotate(80deg);
-  -o-transform: rotate(80deg);
-  transform: rotate(80deg);
-}
-
-#skill2 {
-  width: 45%;
-  float: left;
-}
-#skill2 #puters .pie {
-  background-color: #b4dad7;
-  -webkit-transform: rotate(80deg);
-  -moz-transform: rotate(80deg);
-  -o-transform: rotate(80deg);
-  transform: rotate(80deg);
-}
-#skill2 #puters4 {
-  background-color: #215961;
-  -webkit-transform: rotate(210deg);
-  -moz-transform: rotate(210deg);
-  -o-transform: rotate(210deg);
-  transform: rotate(210deg);
-}
-#skill2 #movies {
-  background-color: #307982;
-  -webkit-transform: rotate(170deg);
-  -moz-transform: rotate(170deg);
-  -o-transform: rotate(170deg);
-  transform: rotate(170deg);
-}
-#skill2 #games {
-  background-color: #2196a7;
-  -webkit-transform: rotate(160deg);
-  -moz-transform: rotate(160deg);
-  -o-transform: rotate(160deg);
-  transform: rotate(160deg);
-}
-#skill2 #music {
-  background-color: #519ca4;
-  -webkit-transform: rotate(110deg);
-  -moz-transform: rotate(110deg);
-  -o-transform: rotate(110deg);
-  transform: rotate(110deg);
-}
-#skill2 #music2 {
-  background-color: #519ca4;
-  -webkit-transform: rotate(80deg);
-  -moz-transform: rotate(80deg);
-  -o-transform: rotate(80deg);
-  transform: rotate(80deg);
-}
-
-.skill-breakdown {
-  overflow: hidden;
-}
-.skill-breakdown .pie-container {
-  position: relative;
-  height: 150px;
-  width: 150px;
-  margin-right: 10px;
-  float: left;
-}
-.skill-breakdown .pie-container .center {
-  position: absolute;
-  z-index: 50;
-  width: 75px;
-  height: 75px;
-  top: 25%;
-  left: 25%;
-  background-color: #1f2426;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-}
-.skill-breakdown .pie-container .pie-back {
-  background-color: #1f2426;
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-}
-.skill-breakdown .pie-container .pie {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-  clip: rect(0px, 75px, 150px, 0px);
-}
-.skill-breakdown .pie-container .hold {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-  clip: rect(0px, 150px, 75px, 75px);
-}
-.skill-breakdown ul {
-  margin-left: 150px;
+footer {
+  background: #ff6f61;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 1rem;
 }
